k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-service
  namespace: default
spec:
  selector:
    app: welcome-app
  ports:
    - port: 80
      targetPort: 8080
